--- a/angular-covid19-mh/src/app/start-panel/start-panel.component.html
+++ b/angular-covid19-mh/src/app/start-panel/start-panel.component.html
@@ -1,4 +1,6 @@
 <!-- PURPOSE: Contains content for the first panel, which is the "Start" page. This displays a welcome message to the user, and contains the button that will set off the mental health assessment. -->
+
+<!-- CONTAINER [START PANEL]: Contains the "panel", or section that displays the introduction to the user, as well as the "Start" button to start the assessment off -->
 <div class="container animated animatedFadeInUp fadeInUp">
     <div class="grid-container">
       
@@ -13,7 +15,7 @@
         <!-- FOOTER: Button starting off the mental health assessment -->
         <div class="item-2">
             <a routerLink="/question/1">
-                <button class=button-start>Start Here</button>
+                <button class="button-start">Start Here</button>
             </a>
         </div>
         
