--- a/angular-covid19-mh/src/app/app.component.html
+++ b/angular-covid19-mh/src/app/app.component.html
@@ -7,13 +7,6 @@
   <!-- HEADER -->
   <head>
     <title>"COVID-19 Mental Health"</title>
-    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@600&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@500&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap" rel="stylesheet">
   </head>
 
@@ -21,20 +14,10 @@
   <body>
     <header>
       <!-- Works like div element/container, for the top part of page -->
-      <!-- (Leave Blank) -->
     </header>
-    
-    <!--<nav>
-      <a routerLink="/question/1">Start</a>
-      <a routerLink="/suggestion">Done</a>
-    </nav>-->
-    
+
+    <!-- For the ROUTING in this app -->
     <router-outlet></router-outlet>
-    <!--<app-base-panel></app-base-panel>-->
-
-
-  <!-- ICONS: Ionicons -->
-  <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
     
   </body>
 
