--- a/angular-covid19-mh/src/app/question-panel/question-panel.component.css
+++ b/angular-covid19-mh/src/app/question-panel/question-panel.component.css
@@ -1,6 +1,6 @@
+/* PURPOSE: Customized styling for the Question panels */
 
-/* For actual container itself and its alignment */
-
+/* For the error message that appears if the user missed questions */
 .error-msg {
     border-style: solid;
     border-radius: 5px;
@@ -15,17 +15,14 @@
 
 }
 
+/* For the panel/container containing the content, ie. the questions, options, and navigation buttons */
 .container {
-    /*max-width: 600px;*/
     background-color: #f7f7f7;
     color: #212121;
 }
 
 /* For the grid within the box/container */
 .grid-container {
-    /*display: grid;
-    grid-template-columns: 5% 90% 5%; /*50px 500px 50px;*/
-    /*grid-template-rows: auto;*/
     grid-template-areas:
         "header header header"
         ". main ."
@@ -35,68 +32,51 @@
     padding-bottom: 4%;
 }
 
+/* HEADER: The question */
 .item-1 {
-    /*grid-area: header;*/
     background-color: #4f60bb;
     border-top-right-radius: 5px;
     border-top-left-radius: 5px;
-    /*box-shadow: 0 8px 16px -8px #2b3433;*/
     color: #FFFFFF;
     display: inline-block;
-    /*padding-left: 5%;
-    padding-right: 5%;*/
     padding: 0 7%;
 }
 
-/*h2 {
-    width: 75%;
-    text-align: center;
-}*/
-
+/* MAIN: The radio button options */
 .item-2 {
-    /*grid-area: main;*/
     text-align: start;
     color: #212121;
     padding-top: 4%;
     width: 100%;
 }
 
+/* FOOTER: The navigation buttons */
 .item-3 {
-    /*grid-area: footer;*/
     color: #212121;
 }
 
+/* To hide the error message ("error-msg") until it's needed */
 [hidden] {
     display: none;
 }
 
 /* BUTTONS */
 
+/* A container with the previous and next buttons */
 .button-nav {
     display: inline-block; /* have buttons beside each other */
-    /*margin-right: 50px;*/ /* Space between buttons */
     width: 30%;
     padding: 3%;
     margin-right: 50px;
-
-    /*font-family: 'Roboto', sans-serif;
-    border-radius: 2px;
-    border: #eebb6e;
-    border-style: solid;
-    border-width: 2px;
-    background-color: #eebb6e;
-    transition-duration: 0.4s;
-    color: #FFFFFF;*/
-    /*box-shadow: 0 20px 54px -8px #2b3433;*/
 }
 
+/* Back/Previous button */
 .button-back {
     float: left;
 }
 
+/* Next button */
 .button-next {
     float: right;
     margin: 0;
 }
-
-/* ANIMATIONS */
