Edited minor styling issue with button width

--- a/angular-covid19-mh/src/app/suggestion-panel/suggestion-panel.component.html
+++ b/angular-covid19-mh/src/app/suggestion-panel/suggestion-panel.component.html
@@ -20,7 +20,7 @@
         <!-- FOOTER: Displays a "Retake" button that clears out the map containing the user's previous answers before navigating back to the Start page/panel -->
         <div class="item-3">
             <a routerLink="/start">
-                <button (click)="retakeButton()">Retake Assessment</button>
+                <button class="button-retake" (click)="retakeButton()">Retake Assessment</button>
             </a>
         </div>
     </div>
